Update to Java19.
This is a major update to the code.
* document changes in call behavior (requires --enable-preview)
* change MPI interface to conform to the latest foreign preview
* change many callers to not use the deprecated System.exec API. Some
  remain.
* remove SecurityManager which has been deprecated for removal. Requires
  a spotlessApply on those files.
* remove dependency on shadowJar and use spring boot for the same
  purpose. shadowJar has been lagging Java releases, delaying our
  ability to upgrade. Spring's only downside is jar size - we're back to
  having all dependencies unfiltered in the resulting fat jar. Since the
  total size is still only 18MB, this seems acceptable.
* Update gradle dependencies.
* Add rmi helper directory with some example scripts.
* Add manual clarifications.