@@ -1,16 +1,13 @@
 plugins {
-  id 'com.github.johnrengelman.shadow' version '7.1.2'
-  id 'com.diffplug.spotless' version '6.2.1'
-  id 'com.github.spotbugs' version '5.0.5'
+  id 'org.springframework.boot' version '3.1.3'
+  id 'com.diffplug.spotless' version '6.21.0'
+  id 'com.github.spotbugs' version '5.0.13'
   id 'java'
   id 'application'
 }
 
-//sourceCompatibility = '16'
-//targetCompatibility = '16'
-
 mainClassName = 'org.ogolem.general.MainOgolem'
-applicationDefaultJvmArgs = ["--add-modules=jdk.incubator.foreign", "--add-modules=jdk.incubator.vector"]
+applicationDefaultJvmArgs = ["--enable-preview", "--add-modules=jdk.incubator.vector"]
 
 version = 'snapshot'
 
@@ -27,25 +24,25 @@ dependencies {
   implementation name: 'scaTTM3F'
   implementation name: 'skalevala'
   implementation 'org.apache.commons:commons-math3:3.6.1'
-  implementation 'org.ejml:ejml-all:0.41'
+  implementation 'org.ejml:ejml-all:0.43'
   implementation 'com.github.fommil.netlib:native_ref-java:1.1'
   implementation 'org.jgrapht:jgrapht-core:1.3.1'
   implementation 'org.jgrapht:jgrapht-ext:1.3.1'
   implementation 'org.jgrapht:jgrapht-io:1.3.1'
   implementation 'org.scala-lang:scala3-library_3:3.1.0'
-  implementation 'org.slf4j:slf4j-api:1.7.35'
-  implementation 'org.slf4j:slf4j-simple:1.7.35'
+  implementation 'org.slf4j:slf4j-api:2.0.7'
+  implementation 'org.slf4j:slf4j-simple:2.0.7'
   testImplementation(
-    'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    'org.junit.jupiter:junit-jupiter-api:5.10.0'
   )
   testRuntimeOnly (
-    'org.junit.jupiter:junit-jupiter-engine:5.8.2',
+    'org.junit.jupiter:junit-jupiter-engine:5.10.0',
   )
 }
 
 java {
   toolchain {
-    languageVersion = JavaLanguageVersion.of(16)
+    languageVersion = JavaLanguageVersion.of(19)
   }
 }
 
@@ -64,11 +61,10 @@ sourceSets {
 }
 
 compileJava {
-  //options.release = 16
   options.warnings = true
   options.deprecation = true
   options.debug = true
-  options.compilerArgs += ["--add-modules=jdk.incubator.foreign"]
+  options.compilerArgs += ["--enable-preview"]
   options.compilerArgs += ["--add-modules=jdk.incubator.vector"]
 }
 
@@ -95,15 +91,7 @@ test {
   exclude 'org/ogolem/locopt/FleminLocOptTest*'
   exclude 'org/ogolem/locopt/PraxisLocOptTest*'
   exclude 'org/ogolem/locopt/RNK1MinLocOptTest*'
-  jvmArgs '--add-modules=jdk.incubator.foreign', '--add-modules=jdk.incubator.vector'
-}
-
-shadowJar {
-  classifier = null
-  minimize{
-    exclude(dependency('org.ogolem:.*:.*'))
-    exclude(dependency('contrib.atomdroiduff:.*:.*'))
-  }
+  jvmArgs '--enable-preview', '--add-modules=jdk.incubator.vector'
 }
 
 spotless {
@@ -122,8 +110,11 @@ spotbugs {
 
 spotbugsMain {
   reports {
+      xml{
+       enabled = true
+      }
     html {
-      enabled = true
+     enabled = true
       stylesheet = 'fancy-hist.xsl'
     }
   }
